--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: minima
-title: (insert title here)
+title: tutorial page
+description: i only made this for the tutorial to make pages
+author: and ME, ive been here the whoooollee time(man i love that show)
